# sovereign_career_architect_thedal

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  Dockerfile  Makefile  Prompt.md  README.md  pyproject.toml  render.yaml
.kiro/specs/sovereign-career-architect/: design.md  requirements.md  tasks.md
src/sovereign_career_architect/: __init__.py  cli.py  config.py
src/sovereign_career_architect/api/: __init__.py  main.py  models.py  routes.py
src/sovereign_career_architect/browser/: __init__.py  agent.py  forms.py  navigation.py  stealth.py  vision.py
src/sovereign_career_architect/core/: __init__.py  agent.py  graph.py  models.py  safety.py  state.py
src/sovereign_career_architect/core/nodes/: __init__.py  archivist.py  executor.py  planner.py  profiler.py  reviewer.py  supervisor.py
src/sovereign_career_architect/cultural/: __init__.py  adapter.py  code_switching.py
src/sovereign_career_architect/demo/: scenarios.py
src/sovereign_career_architect/interview/: __init__.py  feedback.py  generator.py  multilingual.py
src/sovereign_career_architect/jobs/: __init__.py  application.py  extractor.py  matcher.py
src/sovereign_career_architect/memory/: __init__.py  client.py
src/sovereign_career_architect/utils/: logging.py  performance.py
src/sovereign_career_architect/voice/: __init__.py  orchestrator.py  sarvam.py
tests/: __init__.py  test_application_workflow_properties.py  test_archivist_node.py  test_browser_agent.py  test_code_switching_properties.py  test_core_state.py  test_cultural_adaptation_properties.py  test_element_identifier.py  test_element_recognition_properties.py  test_executor_node.py  test_form_filling_properties.py  test_interview_feedback_properties.py  test_interview_multilingual_properties.py  test_interview_question_properties.py  test_job_matching_properties.py  test_job_portal_navigation.py  test_language_routing_properties.py  test_memory_client_enhanced.py  test_memory_persistence_properties.py  test_memory_update_properties.py  test_navigation_consistency_properties.py  test_planner_node.py  test_planner_properties.py  test_profiler_node.py  test_reviewer_node.py  test_reviewer_properties.py  test_safety_layer_properties.py  test_self_correction_properties.py  test_semantic_search_properties.py  test_stealth_mode_properties.py  test_supervisor_node.py  test_supervisor_properties.py  test_system_integration.py  test_voice_interface_properties.py
